# Apex-Xavier-Code-Backup

./: .gitignore  README.md
robotcar_ws/src/imu-atomic-pps/: CHANGELOG.md  CMakeLists.txt  package.xml
robotcar_ws/src/imu-atomic-pps/launch/: atom_imu.launch
robotcar_ws/src/imu-atomic-pps/src/: atom_imu.cpp
robotcar_ws/src/robotcar_bringup/: CMakeLists.txt  package.xml
robotcar_ws/src/robotcar_bringup/config/: bringup_params.yaml
robotcar_ws/src/robotcar_bringup/include/robotcar_bringup/: bringup.h
robotcar_ws/src/robotcar_bringup/launch/: load_config.launch
robotcar_ws/src/robotcar_bringup/src/: bringup.cpp  main.cpp
robotcar_ws/src/robotcar_collect_data/: CMakeLists.txt  package.xml
robotcar_ws/src/robotcar_collect_data/launch/: export_images.launch
robotcar_ws/src/robotcar_collect_data/scripts/: export_image.py
robotcar_ws/src/robotcar_collect_data/src/: extract_compressed_image.cpp  get_lane_data.cpp  get_vo_data.cpp
robotcar_ws/src/robotcar_controller/: CMakeLists.txt  package.xml
robotcar_ws/src/robotcar_controller/config/: controller_params.yaml
robotcar_ws/src/robotcar_controller/include/robotcar_controller/: controller.h
robotcar_ws/src/robotcar_controller/launch/: load_config.launch
robotcar_ws/src/robotcar_controller/src/: controller.cpp
robotcar_ws/src/robotcar_general/: CMakeLists.txt  README.md  package.xml
robotcar_ws/src/robotcar_general/config/: robotcar_params.yaml
robotcar_ws/src/robotcar_general/include/robotcar_general/: curve_fitter.h  math_tools.h  print_helper.h  time_tools.h
robotcar_ws/src/robotcar_general/launch/: load_config.launch  load_tf.launch  localization_and_perception.launch  perception.launch  planning_and_control.launch
robotcar_ws/src/robotcar_general/src/: curve_fitter.cpp  print_helper.cpp
robotcar_ws/src/robotcar_map/: CMakeLists.txt  package.xml
robotcar_ws/src/robotcar_map/config/: inflation_map_params.yaml  semantic_map_params.yaml  static_map_params.yaml
robotcar_ws/src/robotcar_map/include/robotcar_map/: global_map.h  inflation_map.h  map.h  map_code.h  map_manager.h  semantic_map.h  static_map.h
robotcar_ws/src/robotcar_map/maps/pgm_maps/: gmapping_map.yaml  robotcar_sim.pgm  robotcar_sim.yaml  robotcar_sim_blank.pgm  robotcar_sim_blank.yaml  robotcar_sim_empty.pgm  robotcar_sim_empty.yaml  robotcar_sim_norm.pgm  robotcar_sim_norm.yaml  smooth_curve.pgm  smooth_curve.yaml  smooth_curve_path.pgm  smooth_curve_path.yaml  smooth_curve_solid.pgm  smooth_curve_solid.yaml
robotcar_ws/src/robotcar_map/msg/: lanes.msg  obstacles.msg
robotcar_ws/src/robotcar_map/src/: global_map.cpp  inflation_map.cpp  map.cpp  map_manager.cpp  semantic_map.cpp  static_map.cpp  test_map.cpp
robotcar_ws/src/robotcar_motion_planner/: CMakeLists.txt  package.xml
robotcar_ws/src/robotcar_motion_planner/config/: motion_planner_params.yaml
robotcar_ws/src/robotcar_motion_planner/src/dwa_backup/: dwa_motion_planner.cpp  test_dwa_planner.cpp
robotcar_ws/src/robotcar_motion_planner/src/state_lattice/: bvp_solver.cpp  frame_transformer.cpp  state_lattice_motion_planner.cpp  test_state_lattice_planner.cpp
robotcar_ws/src/robotcar_perception/: CMakeLists.txt  README.md  package.xml
robotcar_ws/src/robotcar_perception/include/obstacle_detection/: DefStruct.h  StereoMatching.h  StereoVisionForADAS.h  StixelEstimation.h  StixelSegmenation.h
robotcar_ws/src/robotcar_perception/scripts/: lane_detection.py
robotcar_ws/src/robotcar_perception/scripts/config/: tusimple_lanenet.yaml
robotcar_ws/src/robotcar_perception/scripts/lanenet_model/: __init__.py  lanenet_back_end.py  lanenet_postprocess.py  lanenet_postprocess2.py  lanenet_postprocess3.py  my_postprocess.py
robotcar_ws/src/robotcar_perception/scripts/semantic_segmentation_zoo/: bisenet_v2.py
robotcar_ws/src/robotcar_perception/scripts/tools/: IPM_Image_Computation.py  Undistortion.py  cal_position.py  dbscan.py  getdata.py  main.py  my_cluster.py  my_test.py  my_test_single_image.py  src_BEV.py  test_images.py  test_lanenet.py  test_lanenet_bin.py  test_lanenet_edge.py  test_lanenet_pure_edge.py
robotcar_ws/src/robotcar_perception/src/obstacle_detection/: StereoMatching.cpp  StereoVisionForADAS.cpp  StixelEstimation.cpp  StixelSegmentation.cpp  main.cpp
robotcar_ws/src/robotcar_sim/: CMakeLists.txt  package.xml
robotcar_ws/src/robotcar_sim/config/: GUI_config.rviz
robotcar_ws/src/robotcar_sim/launch/: gazebo.launch  rviz.launch  rviz_empty.launch
robotcar_ws/src/robotcar_sim/urdf/: robotcar.urdf  robotcar_with_odom.urdf.xacro  robotcar_without_odom.urdf.xacro
robotcar_ws/src/robotcar_sim/worlds/: obstacles_scene.world  road_scene.world  road_scene_with_front_features.world
robotcar_ws/src/robotcar_slam/: CMakeLists.txt  README.md  package.xml
robotcar_ws/src/robotcar_slam/config/: EuRoc.yaml  KITTI00-02-backup.yaml  KITTI00-02.yaml  KITTI00-02_Mono.yaml  KITTI03.yaml  KITTI04-12.yaml  KITTI05.yaml  Param.yaml  TUM1.yaml  TUM2.yaml  TUM3.yaml  default.yaml  robotcar_201231.yaml  robotcar_210103.yaml  小车.yaml
robotcar_ws/src/robotcar_slam/config/小车相机标定文件/: extrinsics.yml  intrinsics.yml
robotcar_ws/src/robotcar_slam/include/myslam/: Camera.h  CommonInclude.h  DirectTracker_mod.h  Feature.h  Frame.h  LoopClosing_mod.h  Map.h  MapPoint.h  Mapping_mod.h  MotionClassifier_mod.h  ORBextractor_mod.h  ObjDetector_mod.h  ObjSegment_mod.h  Object.h  Odometry_mod.h  Optimization_mod.h  Param.h  System.h  (+2 more)
robotcar_ws/src/robotcar_slam/launch/: myslam.launch
robotcar_ws/src/robotcar_slam/result/: EVO指令.txt  esti_result.txt  truth_result.txt
robotcar_ws/src/robotcar_slam/src/: Camera.cpp  DirectTracker_mod.cpp  Frame.cpp  LoopClosing_mod.cpp  Map.cpp  MapPoint.cpp  Mapping_mod.cpp  MotionClassifier_mod.cpp  ORBextractor_mod.cpp  ObjDetector_mod.cpp  ObjSegment_mod.cpp  Odometry_mod.cpp  Optimization_mod.cpp  Param.cpp  System.cpp  Transform.cpp  Viewer.cpp
robotcar_ws/src/robotcar_teleop/: CMakeLists.txt  package.xml
robotcar_ws/src/robotcar_teleop/scripts/: teleop_real.py  teleop_real_stop.py  teleop_real_vel.py  teleop_sim.py
(+80 files in other folders)
