<?xml version="1.0"?>
<package>

  <name>robotcar_general</name>
  <version>0.0.0</version>
  <description>The robotcar_general package</description>
  <maintainer email="727548922@qq.com">Neo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>

</package>
